--- a/data/raw/chem/aggregation-induced_emission/result/reflexion_gpt-5-nano-2025-08-07/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/reflexion_gpt-5-nano-2025-08-07/paper_6.yaml
@@ -314,7 +314,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Resource Utilization"
+  - "Prior Methods"
   "topic_labels":
   - "Other Topic"
 - "title": ""
@@ -327,7 +327,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Resource Utilization"
+  - "Other Intent"
   "topic_labels":
   - "Other Topic"
 - "title": "Polymer Science: A Comprehensive Reference"
@@ -340,7 +340,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Model/Architecture Adoption"
+  - "Evaluation"
   "topic_labels":
   - "Other Topic"
 - "title": ""
@@ -358,7 +358,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Other Intent"
   "topic_labels":
   - "Other Topic"
 - "title": ""
@@ -366,7 +366,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Metrics Utilization"
+  - "Domain Overview"
   "topic_labels":
   - "Other Topic"
 - "title": "Physical Properties of Polymers Handbook"
@@ -374,7 +374,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Metrics Utilization"
+  - "Domain Overview"
   "topic_labels":
   - "Other Topic"
 - "title": ""
@@ -387,7 +387,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prospective Application"
+  - "Other Intent"
   "topic_labels":
   - "Other Topic"
 - "title": ""
@@ -395,7 +395,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Domain Overview"
   "topic_labels":
   - "Other Topic"
 - "title": ""
