--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_10.yaml
@@ -44,80 +44,60 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
-    - "Other Topic"
+    - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[14]"
@@ -130,10 +110,10 @@
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[15]"
@@ -146,10 +126,10 @@
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[16]"
@@ -162,10 +142,10 @@
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[17]"
@@ -178,10 +158,10 @@
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[18]"
@@ -194,42 +174,34 @@
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[19]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[20]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[21]"
@@ -238,14 +210,14 @@
   "intent_labels":
   - - "Domain Overview"
     - "Prior Methods"
-    - "Domain Overview"
+    - "Prior Methods"
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Hydrogen-bonded polymer networks and gels"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[22]"
@@ -254,14 +226,14 @@
   "intent_labels":
   - - "Domain Overview"
     - "Prior Methods"
-    - "Domain Overview"
+    - "Prior Methods"
     - "Domain Overview"
     - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Hydrogen-bonded polymer networks and gels"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[23]"
@@ -272,28 +244,24 @@
     - "Prior Methods"
     - "Prior Methods"
     - "Domain Overview"
-    - "Background"
+    - "Prior Methods"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[24]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[25]"
@@ -306,10 +274,10 @@
     - "Domain Overview"
     - "Research Gap"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Physical strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[26]"
@@ -322,10 +290,10 @@
     - "Domain Overview"
     - "Research Gap"
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[27]"
@@ -347,43 +315,31 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[31]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
+  - - "aggregation-induced emission"
     - "aggregation-induced emission"
-    - "Supramolecular strategies"
     - "aggregation-induced emission"
+    - "Doping and encapsulation into polymer matrices"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[32]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "title": ""
@@ -391,11 +347,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "title": ""
@@ -403,27 +355,15 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Resource Utilization"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Algorithm/Principle Adoption"
-    - "Resource Utilization"
+  - []
   "topic_labels":
-  - - "Construction of photoresponsive AIE polymers"
-    - "Rotor-rich ionic cores and donor–acceptor scaffolds"
-    - "aggregation-induced emission"
-    - "aggregation-induced emission"
-    - "Side-chain copolymerization with monofunctional units"
+  - []
 - "title": ""
   "unique_context_marker": "[35]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - []
 - "title": ""
@@ -439,49 +379,25 @@
   "block_ids":
   - 5
   "intent_labels":
-  - - "Algorithm/Principle Adoption"
-    - "Domain Overview"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Background"
+  - []
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "aggregation-induced emission"
-    - "Doping and encapsulation into polymer matrices"
-    - "aggregation-induced emission"
-    - "aggregation-induced emission"
+  - []
 - "title": ""
   "unique_context_marker": "[38]"
   "block_ids":
   - 5
   "intent_labels":
-  - - "Background"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
+  - []
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "aggregation-induced emission"
-    - "Doping and encapsulation into polymer matrices"
-    - "aggregation-induced emission"
-    - "aggregation-induced emission"
+  - []
 - "title": ""
   "unique_context_marker": "[39]"
   "block_ids":
   - 5
   "intent_labels":
-  - - "Background"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
+  - []
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "aggregation-induced emission"
-    - "Doping and encapsulation into polymer matrices"
-    - "aggregation-induced emission"
-    - "aggregation-induced emission"
+  - []
 - "title": ""
   "unique_context_marker": "[40]"
   "block_ids":
@@ -492,39 +408,31 @@
   - - "Hydrogen-bonded polymer networks and gels"
     - "Supramolecular strategies"
     - "Hydrogen-bonded polymer networks and gels"
-    - "Supramolecular strategies"
+    - "Hydrogen-bonded polymer networks and gels"
     - "Hydrogen-bonded polymer networks and gels"
 - "title": ""
   "unique_context_marker": "[41]"
   "block_ids":
   - 6
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
-    - "Domain Overview"
-    - "Background"
+  - []
   "topic_labels":
   - - "Hydrogen-bonded polymer networks and gels"
     - "Supramolecular strategies"
     - "Hydrogen-bonded polymer networks and gels"
-    - "Supramolecular strategies"
+    - "Hydrogen-bonded polymer networks and gels"
     - "Hydrogen-bonded polymer networks and gels"
 - "title": ""
   "unique_context_marker": "[42]"
   "block_ids":
   - 6
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Background"
-    - "Domain Overview"
-    - "Background"
+  - []
   "topic_labels":
   - - "Hydrogen-bonded polymer networks and gels"
     - "Supramolecular strategies"
     - "Hydrogen-bonded polymer networks and gels"
-    - "Supramolecular strategies"
+    - "Hydrogen-bonded polymer networks and gels"
     - "Hydrogen-bonded polymer networks and gels"
 - "title": ""
   "unique_context_marker": "[43]"
@@ -546,10 +454,14 @@
   "block_ids":
   - 8
   "intent_labels":
-  - []
+  - - "Background"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
-  - - "Hydrogen-bonded polymer networks and gels"
+  - - "Supramolecular strategies"
+    - "Supramolecular strategies"
     - "Hydrogen-bonded polymer networks and gels"
-    - "aggregation-induced emission"
     - "Hydrogen-bonded polymer networks and gels"
-    - "aggregation-induced emission"
+    - "Hydrogen-bonded polymer networks and gels"
