--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_5.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_5.yaml
@@ -10,7 +10,7 @@
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[2]"
   "block_ids":
@@ -22,7 +22,7 @@
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[3]"
   "block_ids":
@@ -31,10 +31,10 @@
   - []
   "topic_labels":
   - - "Photopatterning and optical data storage"
-    - "Chemosensing and analyte detection"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
     - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[4]"
   "block_ids":
@@ -42,7 +42,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[5]"
   "block_ids":
@@ -50,7 +54,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Chemosensing and analyte detection"
+    - "Chemosensing and analyte detection"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[6]"
   "block_ids":
@@ -58,7 +66,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[7]"
   "block_ids":
@@ -66,7 +78,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[8]"
   "block_ids":
@@ -74,7 +90,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[9]"
   "block_ids":
@@ -82,7 +102,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[10]"
   "block_ids":
@@ -90,7 +114,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[11]"
   "block_ids":
@@ -98,7 +126,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[12]"
   "block_ids":
@@ -106,7 +138,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[13]"
   "block_ids":
@@ -114,7 +150,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Photopatterning and optical data storage"
+    - "Applications of AIE materials"
 - "title": ""
   "unique_context_marker": "[14]"
   "block_ids":
@@ -122,11 +162,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
+  - []
 - "title": ""
   "unique_context_marker": "[15]"
   "block_ids":
@@ -134,11 +170,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
-    - "Photopatterning and optical data storage"
+  - []
 - "title": ""
   "unique_context_marker": "[16]"
   "block_ids": []
@@ -214,11 +246,15 @@
   "block_ids":
   - 0
   "intent_labels":
-  - []
+  - - "Resource Utilization"
+    - "Background"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
   - - "Supramolecular strategies"
-    - "Photopatterning and optical data storage"
-    - "Applications of AIE materials"
+    - "aggregation-induced emission"
+    - "Supramolecular strategies"
     - "Supramolecular strategies"
     - "Supramolecular strategies"
 - "title": ""
@@ -236,32 +272,32 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
+  - - "Background"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
+    - "Domain Overview"
     - "Domain Overview"
   "topic_labels":
   - - "aggregation-induced emission"
     - "aggregation-induced emission"
     - "Applications of AIE materials"
-    - "aggregation-induced emission"
+    - "Radiative decay pathways for bright emission"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[34]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
+  - - "Background"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
+    - "Domain Overview"
     - "Domain Overview"
   "topic_labels":
   - - "aggregation-induced emission"
     - "aggregation-induced emission"
     - "Applications of AIE materials"
-    - "aggregation-induced emission"
+    - "Radiative decay pathways for bright emission"
     - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[35]"
@@ -278,11 +314,11 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
+  - - "Background"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
-    - "Prior Methods"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
   - - "Supramolecular strategies"
     - "Supramolecular strategies"
@@ -309,25 +345,25 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
-    - "Domain Overview"
-    - "Resource Utilization"
-    - "Background"
-    - "Setting/Protocal Adoption"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "aggregation-induced emission"
+    - "aggregation-induced emission"
+    - "Applications of AIE materials"
+    - "Construction of photoresponsive AIE polymers"
+    - "Supramolecular strategies"
 - "title": ""
   "unique_context_marker": "[42]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
-    - "Domain Overview"
-    - "Resource Utilization"
-    - "Background"
-    - "Setting/Protocal Adoption"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "aggregation-induced emission"
+    - "aggregation-induced emission"
+    - "Applications of AIE materials"
+    - "Construction of photoresponsive AIE polymers"
+    - "Supramolecular strategies"
 - "title": ""
   "unique_context_marker": "[43]"
   "block_ids": []
@@ -358,42 +394,34 @@
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
+  - - "Background"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
-    - "Prior Methods"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
-  - - "Supramolecular strategies"
-    - "Supramolecular strategies"
-    - "Applications of AIE materials"
-    - "Supramolecular strategies"
-    - "Supramolecular strategies"
+  - []
 - "title": ""
   "unique_context_marker": "[49]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Prior Methods"
+  - - "Background"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
-    - "Prior Methods"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
-  - - "aggregation-induced emission"
-    - "Supramolecular strategies"
-    - "Applications of AIE materials"
-    - "Supramolecular strategies"
-    - "Supramolecular strategies"
+  - []
 - "title": ""
   "unique_context_marker": "[50]"
   "block_ids":
   - 0
   "intent_labels":
-  - - "Domain Overview"
+  - - "Resource Utilization"
+    - "Background"
     - "Domain Overview"
-    - "Background"
-    - "Background"
+    - "Domain Overview"
     - "Domain Overview"
   "topic_labels":
   - []
@@ -434,4 +462,8 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Applications of AIE materials"
+    - "Applications of AIE materials"
+    - "Applications of AIE materials"
+    - "Applications of AIE materials"
+    - "Applications of AIE materials"
