--- a/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_7.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_cot_k_gpt-5-nano-2025-08-07/paper_7.yaml
@@ -4,13 +4,13 @@
   "block_ids":
   - 2
   "intent_labels":
-  - - "Other Intent"
-    - "Domain Overview"
-    - "Other Intent"
-    - "Other Intent"
-    - "Resource Utilization"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Photosensitization for ROS generation"
+    - "Photosensitization for ROS generation"
+    - "aggregation-induced emission"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[2]"
   "block_ids":
@@ -18,11 +18,10 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Photosensitization for ROS generation"
-    - "aggregation-induced emission"
-    - "aggregation-induced emission"
-    - "Photosensitization for ROS generation"
-    - "Photosensitization for ROS generation"
+  - - "Postmodification of polymer precursors"
+    - "Postmodification of polymer precursors"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[3]"
   "block_ids": []
@@ -38,23 +37,22 @@
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Algorithm/Principle Adoption"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Algorithm/Principle Adoption"
+    - "Other Intent"
   "topic_labels":
-  - - "Postmodification of polymer precursors"
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "aggregation-induced emission"
     - "Photodynamic therapy and antimicrobial treatment"
-    - "Postmodification of polymer precursors"
-    - "Postmodification of polymer precursors"
     - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -66,15 +64,11 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Applications of AIE materials"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
@@ -82,14 +76,10 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photosensitization for ROS generation"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -98,14 +88,10 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Postmodification of polymer precursors"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -114,14 +100,10 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Other Topic"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -130,14 +112,10 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Prospective Application"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Postmodification of polymer precursors"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -156,16 +134,12 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-    - "Photosensitization for ROS generation"
+    - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[15]"
@@ -222,11 +196,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Prior Methods"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Research Gap"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -239,13 +209,13 @@
   - 1
   "intent_labels":
   - - "Prior Methods"
-    - "Domain Overview"
-    - "Prospective Application"
     - "Prior Methods"
-    - "Algorithm/Principle Adoption"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Coordination-driven assemblies and nanostructures"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -255,10 +225,10 @@
   - 1
   "intent_labels":
   - - "Prior Methods"
-    - "Domain Overview"
-    - "Prospective Application"
     - "Prior Methods"
-    - "Algorithm/Principle Adoption"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -270,11 +240,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -286,11 +252,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -302,14 +264,10 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Postmodification of polymer precursors"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -343,30 +301,22 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
+    - "aggregation-induced emission"
     - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "aggregation-induced emission"
+    - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[37]"
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
-    - "Research Gap"
-    - "Domain Overview"
+  - []
   "topic_labels":
-  - - "Photodynamic therapy and antimicrobial treatment"
-    - "Photodynamic therapy and antimicrobial treatment"
+  - - "aggregation-induced emission"
+    - "aggregation-induced emission"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
@@ -390,17 +340,13 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Photodynamic therapy and antimicrobial treatment"
+    - "aggregation-induced emission"
     - "Photodynamic therapy and antimicrobial treatment"
     - "Photodynamic therapy and antimicrobial treatment"
-    - "Photosensitization for ROS generation"
-    - "Photodynamic therapy and antimicrobial treatment"
+    - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[42]"
   "block_ids": []
@@ -438,7 +384,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[49]"
   "block_ids":
@@ -446,7 +396,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[50]"
   "block_ids":
@@ -454,7 +408,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[51]"
   "block_ids":
@@ -462,7 +420,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
+    - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[52]"
   "block_ids":
@@ -470,10 +432,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Doping and encapsulation into polymer matrices"
-    - "Doping and encapsulation into polymer matrices"
-    - "Doping and encapsulation into polymer matrices"
-    - "Doping and encapsulation into polymer matrices"
+  - []
 - "title": ""
   "unique_context_marker": "[53]"
   "block_ids":
