--- a/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_10.yaml
@@ -68,7 +68,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -76,7 +76,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -140,7 +140,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -148,7 +148,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -221,7 +221,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[33]"
   "block_ids":
@@ -229,15 +229,15 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[34]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Resource Utilization"
+  - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[35]"
   "block_ids":
@@ -245,7 +245,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[36]"
   "block_ids":
@@ -253,15 +253,15 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "aggregation-induced emission"
 - "title": "Principles of Optics: Electromagnetic Theory of Propagation, Interference, and Diffraction of Light"
   "unique_context_marker": "[37]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[38]"
   "block_ids":
@@ -269,7 +269,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[39]"
   "block_ids":
@@ -277,7 +277,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[40]"
   "block_ids":
@@ -299,7 +299,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Hydrogen-bonded polymer networks and gels"
 - "title": ""
