--- a/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_5.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_5.yaml
@@ -194,7 +194,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - "Resource Utilization"
+  - "Domain Overview"
   "topic_labels":
   - "Supramolecular strategies"
 - "title": ""
@@ -261,17 +261,17 @@
   "block_ids":
   - 0
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Resource Utilization"
   "topic_labels":
-  - "Construction of photoresponsive AIE polymers"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[42]"
   "block_ids":
   - 0
   "intent_labels":
-  - "Background"
+  - "Resource Utilization"
   "topic_labels":
-  - "Construction of photoresponsive AIE polymers"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[43]"
   "block_ids": []
@@ -302,7 +302,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Supramolecular strategies"
 - "title": ""
@@ -310,7 +310,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - "Background"
+  - "Domain Overview"
   "topic_labels":
   - "Supramolecular strategies"
 - "title": ""
