--- a/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_6.yaml
@@ -16,7 +16,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - "In situ and charge-generating polymerizations"
 - "title": ""
   "unique_context_marker": "[2]"
   "block_ids":
@@ -24,23 +24,23 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
   "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Research Gap"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - "Other Topic"
 - "title": ""
   "unique_context_marker": "[5]"
   "block_ids":
@@ -54,9 +54,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Research Gap"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[7]"
   "block_ids":
@@ -64,7 +64,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - "Construction of photoresponsive AIE polymers"
 - "title": ""
   "unique_context_marker": "[8] a)"
   "block_ids": []
@@ -85,9 +85,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Prior Methods"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - "Photosensitization for ROS generation"
 - "title": ""
   "unique_context_marker": "[9] a)"
   "block_ids": []
@@ -105,15 +105,15 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - "In situ and charge-generating polymerizations"
 - "title": ""
   "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Prior Methods"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[11] a)"
   "block_ids": []
@@ -134,9 +134,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Photosensitization for ROS generation"
 - "title": ""
   "unique_context_marker": "[12]"
   "block_ids":
@@ -144,7 +144,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - "In situ and charge-generating polymerizations"
 - "title": ""
   "unique_context_marker": "[13]"
   "block_ids":
@@ -158,9 +158,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Importance of Problem"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[15] a)"
   "block_ids": []
@@ -173,7 +173,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
   "unique_context_marker": "[16] a)"
   "block_ids": []
@@ -184,9 +184,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - "Counterion selection and exchange"
 - "title": ""
   "unique_context_marker": "[17] a)"
   "block_ids": []
@@ -205,9 +205,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prospective Application"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[19] a)"
   "block_ids": []
@@ -218,7 +218,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
@@ -254,9 +254,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Setting/Protocal Adoption"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[22] a)"
   "block_ids": []
@@ -267,7 +267,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   "topic_labels":
   - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
@@ -304,8 +304,8 @@
   - 1
   - 2
   "intent_labels":
-  - "Algorithm/Principle Adoption"
-  - "Algorithm/Principle Adoption"
+  - "Other Intent"
+  - "Prior Methods"
   "topic_labels":
   - "In situ and charge-generating polymerizations"
   - "In situ and charge-generating polymerizations"
@@ -316,7 +316,7 @@
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Main-chain copolymerization of difunctional monomers"
 - "title": ""
   "unique_context_marker": "[26] a)"
   "block_ids": []
@@ -340,7 +340,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -360,7 +360,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
   "unique_context_marker": "[30]"
   "block_ids":
@@ -368,7 +368,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": "Physical Properties of Polymers Handbook"
   "unique_context_marker": "[31]"
   "block_ids":
@@ -376,7 +376,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - "Polyelectrolyte architectures and single-chain aggregates"
 - "title": ""
   "unique_context_marker": "[32] a)"
   "block_ids": []
@@ -387,7 +387,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prospective Application"
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Photopatterning and optical data storage"
 - "title": ""
@@ -395,7 +395,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Resource Utilization"
   "topic_labels":
   - "Photosensitization for ROS generation"
 - "title": ""
@@ -413,7 +413,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Metrics Utilization"
   "topic_labels":
   - "Photosensitization for ROS generation"
 - "title": ""
@@ -426,7 +426,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Prospective Application"
   "topic_labels":
   - "Photosensitization for ROS generation"
 - "title": ""
@@ -439,6 +439,6 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prospective Application"
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Photopatterning and optical data storage"
