--- a/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_7.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_final_gpt-5-nano-2025-08-07/paper_7.yaml
@@ -4,7 +4,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Other Intent"
+  - "Research Gap"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -12,9 +12,9 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[3]"
   "block_ids": []
@@ -30,9 +30,9 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - "Postmodification of polymer precursors"
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[6]"
   "block_ids":
@@ -178,7 +178,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
@@ -186,7 +186,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
@@ -194,7 +194,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
@@ -229,7 +229,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[37]"
   "block_ids":
@@ -328,7 +328,7 @@
   "block_ids":
   - 7
   "intent_labels":
-  - "Resource Utilization"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Doping and encapsulation into polymer matrices"
 - "title": ""
