--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_10.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_10.yaml
@@ -44,7 +44,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -52,7 +52,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -60,7 +60,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -68,7 +68,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -76,7 +76,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -84,7 +84,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -92,7 +92,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -100,7 +100,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -108,7 +108,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -116,7 +116,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -124,7 +124,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -132,7 +132,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -140,7 +140,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -148,7 +148,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -156,7 +156,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -164,7 +164,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -172,7 +172,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -180,7 +180,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -203,7 +203,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
   - null
 - "title": ""
@@ -211,7 +211,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
   - null
 - "title": ""
@@ -219,33 +219,33 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[33]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[34]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - null
+  - "Side-chain copolymerization with monofunctional units"
 - "title": ""
   "unique_context_marker": "[35]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[36]"
   "block_ids":
@@ -253,31 +253,31 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photophysical responsive systems"
+  - "aggregation-induced emission"
 - "title": "Principles of Optics: Electromagnetic Theory of Propagation, Interference, and Diffraction of Light"
   "unique_context_marker": "[37]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - null
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[38]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - null
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[39]"
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - null
+  - "Photophysical responsive systems"
 - "title": ""
   "unique_context_marker": "[40]"
   "block_ids":
@@ -285,13 +285,13 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Supramolecular strategies"
+  - null
 - "title": ""
   "unique_context_marker": "[41]"
   "block_ids":
   - 6
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -299,7 +299,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Prior Methods"
   "topic_labels":
   - null
 - "title": ""
@@ -322,6 +322,6 @@
   "block_ids":
   - 8
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
