--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_5.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_5.yaml
@@ -30,7 +30,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[5]"
   "block_ids":
@@ -38,7 +38,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[6]"
   "block_ids":
@@ -46,7 +46,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[7]"
   "block_ids":
@@ -54,7 +54,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[8]"
   "block_ids":
@@ -62,7 +62,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[9]"
   "block_ids":
@@ -70,7 +70,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[10]"
   "block_ids":
@@ -78,7 +78,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[11]"
   "block_ids":
@@ -86,7 +86,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[12]"
   "block_ids":
@@ -94,7 +94,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[13]"
   "block_ids":
@@ -102,7 +102,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photopatterning and optical data storage"
+  - null
 - "title": ""
   "unique_context_marker": "[14]"
   "block_ids":
@@ -110,7 +110,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[15]"
   "block_ids":
@@ -118,7 +118,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[16]"
   "block_ids": []
@@ -261,17 +261,17 @@
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Resource Utilization"
   "topic_labels":
-  - "Construction of photoresponsive AIE polymers"
+  - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[42]"
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Resource Utilization"
   "topic_labels":
-  - "Construction of photoresponsive AIE polymers"
+  - "Postmodification of polymer precursors"
 - "title": ""
   "unique_context_marker": "[43]"
   "block_ids": []
@@ -318,7 +318,7 @@
   "block_ids":
   - 0
   "intent_labels":
-  - null
+  - "Resource Utilization"
   "topic_labels":
   - "Chemosensing and analyte detection"
 - "title": ""
@@ -358,4 +358,4 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Applications of AIE materials"
+  - "Hydrogen-bonded polymer networks and gels"
