--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_6.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_6.yaml
@@ -22,7 +22,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -30,15 +30,15 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - null
 - "title": ""
   "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -46,7 +46,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -54,7 +54,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -62,7 +62,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -111,7 +111,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -142,7 +142,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -150,7 +150,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -158,7 +158,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
   - null
 - "title": ""
@@ -173,7 +173,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Charged AIE systems: design and architectures"
 - "title": ""
   "unique_context_marker": "[16] a)"
   "block_ids": []
@@ -186,7 +186,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Charged AIE systems: design and architectures"
 - "title": ""
   "unique_context_marker": "[17] a)"
   "block_ids": []
@@ -199,13 +199,13 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Charged AIE systems: design and architectures"
 - "title": ""
   "unique_context_marker": "[18]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -220,7 +220,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[20] a)"
   "block_ids": []
@@ -233,7 +233,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[21] a)"
   "block_ids": []
@@ -256,7 +256,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photosensitization for ROS generation"
 - "title": ""
   "unique_context_marker": "[22] a)"
   "block_ids": []
@@ -269,7 +269,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photodynamic therapy and antimicrobial treatment"
 - "title": ""
   "unique_context_marker": "[23] a)"
   "block_ids": []
@@ -297,15 +297,15 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photopatterning and optical data storage"
 - "title": ""
   "unique_context_marker": "[24]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - "Algorithm/Principle Adoption"
-  - "Algorithm/Principle Adoption"
+  - null
+  - "Prior Methods"
   "topic_labels":
   - "In situ and charge-generating polymerizations"
   - "In situ and charge-generating polymerizations"
@@ -316,7 +316,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "In situ and charge-generating polymerizations"
+  - "Main-chain copolymerization of difunctional monomers"
 - "title": ""
   "unique_context_marker": "[26] a)"
   "block_ids": []
@@ -340,9 +340,9 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
-  - "aggregation-induced emission"
+  - null
 - "title": ""
   "unique_context_marker": "[29] a)"
   "block_ids": []
@@ -360,7 +360,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - "Charged AIE systems: design and architectures"
+  - null
 - "title": ""
   "unique_context_marker": "[30]"
   "block_ids":
@@ -368,7 +368,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Polyelectrolyte architectures and single-chain aggregates"
+  - null
 - "title": "Physical Properties of Polymers Handbook"
   "unique_context_marker": "[31]"
   "block_ids":
@@ -376,7 +376,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Charged AIE systems: design and architectures"
+  - null
 - "title": ""
   "unique_context_marker": "[32] a)"
   "block_ids": []
@@ -395,9 +395,9 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
-  - "Photosensitization for ROS generation"
+  - null
 - "title": ""
   "unique_context_marker": "[34] a)"
   "block_ids": []
@@ -415,7 +415,7 @@
   "intent_labels":
   - null
   "topic_labels":
-  - null
+  - "Photosensitization for ROS generation"
 - "title": ""
   "unique_context_marker": "[35] a)"
   "block_ids": []
@@ -426,7 +426,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Photosensitization for ROS generation"
 - "title": ""
@@ -439,6 +439,6 @@
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Photodynamic therapy and antimicrobial treatment"
