--- a/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_7.yaml
+++ b/data/raw/chem/aggregation-induced_emission/result/taxo_reverse_gpt-5-nano-2025-08-07/paper_7.yaml
@@ -4,7 +4,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Research Gap"
   "topic_labels":
   - "aggregation-induced emission"
 - "title": ""
@@ -12,7 +12,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Photosensitization for ROS generation"
 - "title": ""
@@ -30,15 +30,15 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - "aggregation-induced emission"
 - "title": ""
   "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -46,7 +46,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -54,7 +54,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -62,7 +62,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -70,7 +70,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -78,7 +78,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -96,7 +96,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -154,7 +154,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -162,7 +162,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -170,7 +170,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -178,7 +178,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -186,7 +186,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -194,7 +194,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -227,7 +227,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -235,7 +235,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -258,7 +258,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - null
+  - "Domain Overview"
   "topic_labels":
   - null
 - "title": ""
@@ -298,7 +298,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - null
 - "title": ""
   "unique_context_marker": "[49]"
   "block_ids":
@@ -306,7 +306,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - null
 - "title": ""
   "unique_context_marker": "[50]"
   "block_ids":
@@ -314,7 +314,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - null
 - "title": ""
   "unique_context_marker": "[51]"
   "block_ids":
@@ -322,15 +322,15 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Photodynamic therapy and antimicrobial treatment"
+  - null
 - "title": ""
   "unique_context_marker": "[52]"
   "block_ids":
   - 7
   "intent_labels":
-  - "Resource Utilization"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Other Topic"
+  - "Doping and encapsulation into polymer matrices"
 - "title": ""
   "unique_context_marker": "[53]"
   "block_ids":
